// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoardSquare /> renders black tile when not validated in any direction 1`] = `
<ForwardRef(Box)
  height="25px"
  sx={null}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="black"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</ForwardRef(Box)>
`;

exports[`<BoardSquare /> renders green tile when valid in every direction 1`] = `
<ForwardRef(Box)
  height="25px"
  sx={null}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="green"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</ForwardRef(Box)>
`;

exports[`<BoardSquare /> renders properly when is over and can drop 1`] = `
<ForwardRef(Box)
  height="25px"
  width="25px"
/>
`;

exports[`<BoardSquare /> renders properly with null boardSquare 1`] = `
<ForwardRef(Box)
  height="25px"
  sx={null}
  width="25px"
/>
`;

exports[`<BoardSquare /> renders red tile when invalid in any direction 1`] = `
<ForwardRef(Box)
  height="25px"
  sx={null}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="red"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</ForwardRef(Box)>
`;
